<resources>
    <!-- app name-->
    <string name="app_name">VisualChat</string>

    <!-- Main Category -->
    <string name="tab_customize_style">Font</string>
    <string name="tab_my_word">Sentences</string>
    <string name="tab_advance_function">Advanced</string>

    <string name="auto_font_warning">This feature only supports Android 8.0 and newer</string>
    <string name="auto_size">Auto</string>
    <string name="text_preview">Preview</string>
    <string name="clear">Clear</string>
    <string name="paste">Paste</string>
    <string name="new_word">New sentence</string>
    <string name="mod_word">Edit sentence</string>
    <string name="add">Add</string>
    <string name="mod">Edit</string>
    <string name="word_setting_hint">Long press to Sort, right swipe to delete</string>
    <string name="visual_effect">Visual Effects</string>
    <string name="advance_blink">Blink Mode</string>
    <string name="advance_marquee">Marquee</string>
    <string name="table_mode">Table Mode</string>

    <!-- Setting Category -->
    <string name="customize">Customization</string>
    <string name="about">About</string>

    <!-- Setting Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="word_setting">Sentences configuration</string>
    <string name="about_app">About this APP </string>

    <!-- Sample data-->
    <string name="sample_01">Thanks</string>
    <string name="sample_02">It\'s OK</string>
    <string name="sample_06">Nice to meet you</string>
    <string name="sample_03">Good morning</string>
    <string name="sample_04">Let\'s HAVE dinner</string>
    <string name="sample_05">The supervisor said there will be a special bonus this month !!!</string>
    <string name="sample_07">It seems like going to rain</string>
    <string name="sample_08">Would you mind spelling that out for me?</string>
    <string name="designer">by mrfatworm</string>

    <!-- Hint-->
    <string name="full_screen">Full screen</string>
    <string name="type_here">Type here</string>
    <string name="logo">Logo</string>
    <string name="leave_full_screen">Leave full screen</string>
    <string name="color_list_text">A</string>
    <string name="font_size">Font size</string>
    <string name="bold">Bold</string>
    <string name="empty_title">Nothing here now, let\'s add something</string>

</resources>
